Resolves: tdf#130093 some lwp file not loading

Change-Id: I2be53792f0fadcf1ca0e99c8f9fab7305d0fcddd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87100
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>